--- a/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
@@ -63,7 +63,7 @@ hibernate.show_sql=false
 entitymanager.packages.to.scan=org.opensmartgridplatform.domain.da.entities,org.opensmartgridplatform.domain.core.entities
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 # --- DELIVERY OPTIONS ---
 jms.default.explicit.qos.enabled=true
