--- a/osgp/platform/osgp-adapter-ws-core/src/main/resources/osgp-adapter-ws-core.properties
+++ b/osgp/platform/osgp-adapter-ws-core/src/main/resources/osgp-adapter-ws-core.properties
@@ -73,7 +73,7 @@ firmware.path=firmware
 firmware.filestorage=true
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 jms.default.initial.redelivery.delay=0
 jms.default.maximum.redeliveries=3
