--- a/osgp/platform/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
+++ b/osgp/platform/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
@@ -67,7 +67,7 @@ entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.microgrids.
 # =========================================================
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 # --- DELIVERY OPTIONS ---
 jms.default.explicit.qos.enabled=true
