--- a/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
+++ b/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
@@ -50,7 +50,7 @@ jaxb2.marshaller.context.path.smartmetering.configuration=org.opensmartgridplatf
 application.name=OSGP_ADAPTER_WS_SMARTMETERING
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 # --- DELIVERY OPTIONS ---
 #Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
