--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -39,7 +39,7 @@ entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
 # =========================================================
 
 # ActiveMQ broker
-jms.domain.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.domain.activemq.broker.url=failover:(ssl://localhost:61617)
 
 jms.activemq.trust.all.packages=true
 # When trust.all.packages=false
@@ -78,7 +78,7 @@ jms.incoming.domain.responses.max.concurrent.consumers=10
 # =========================================================
 
 # ActiveMQ broker
-jms.protocol.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.protocol.activemq.broker.url=failover:(ssl://localhost:61617)
 
 # ActiveMQ message group cache size
 # default value for the cachedMessageGroupMapFactory cacheSize is 1024
