--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -38,7 +38,7 @@ paging.default.pagesize=15
 dlms.port.server=9598
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 jms.activemq.connection.pool.max.active.sessions=500
 jms.activemq.connection.pool.size=10
 jms.activemq.connection.queue.prefetch=1
