--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -76,7 +76,7 @@ paging.maximum.pagesize=30
 paging.default.pagesize=15
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 jms.default.initial.redelivery.delay=0
 jms.default.maximum.redeliveries=3
