--- a/osgp/protocol-adapter-oslp/signing-server/src/main/resources/signing-server.properties
+++ b/osgp/protocol-adapter-oslp/signing-server/src/main/resources/signing-server.properties
@@ -24,7 +24,7 @@ signing.server.security.provider=SunEC
 # =========================================================
 # --- JMS Settings ---
 # =========================================================
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 jms.default.initial.redelivery.delay=0
 jms.default.maximum.redeliveries=3
