--- a/osgp/platform/osgp-adapter-domain-core/src/main/resources/osgp-adapter-domain-core.properties
+++ b/osgp/platform/osgp-adapter-domain-core/src/main/resources/osgp-adapter-domain-core.properties
@@ -35,7 +35,7 @@ flyway.init.on.migrate=true
 entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 jms.default.initial.redelivery.delay=0
 jms.default.maximum.redeliveries=3
