--- a/osgp/platform/osgp-adapter-domain-microgrids/src/main/resources/osgp-adapter-domain-microgrids.properties
+++ b/osgp/platform/osgp-adapter-domain-microgrids/src/main/resources/osgp-adapter-domain-microgrids.properties
@@ -66,7 +66,7 @@ hibernate.show_sql=false
 entitymanager.packages.to.scan=org.opensmartgridplatform.domain.microgrids.entities,org.opensmartgridplatform.domain.core.entities
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 # --- DELIVERY OPTIONS ---
 jms.default.explicit.qos.enabled=true
