--- a/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
+++ b/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
@@ -58,7 +58,7 @@ web.service.notification.enabled=true
 web.service.notification.organisation=OSGP
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 jms.default.initial.redelivery.delay=0
 jms.default.maximum.redeliveries=3
