--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/test/resources/test.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/test/resources/test.properties
@@ -34,7 +34,7 @@ paging.maximum.pagesize=30
 paging.default.pagesize=15
 
 # --- JMS Settings ---
-jms.activemq.broker.url=tcp://localhost:61616
+jms.activemq.broker.url=ssl://localhost:61617
 
 jms.default.initial.redelivery.delay=0
 jms.default.maximum.redeliveries=3
