FLEX-4754 ~ Uses application name 'OSGP' for notification configuration.

--- a/osgp/platform/osgp-adapter-ws-core/src/main/resources/osgp-adapter-ws-core.properties
+++ b/osgp/platform/osgp-adapter-ws-core/src/main/resources/osgp-adapter-ws-core.properties
@@ -60,7 +60,7 @@ scheduling.task.page.size=100
 net.management.organisation=LianderNetManagement
 
 #Notification Settings
-web.service.notification.application.name=WS_CORE
+web.service.notification.application.name=OSGP
 web.service.notification.enabled=true
 web.service.notification.organisation=OSGP
 
