--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -50,7 +50,7 @@ paging.default.pagesize=15
 
 #Notification Settings
 web.service.notification.enabled=true
-web.service.notification.application.name=
+web.service.notification.application.name=OSGP
 
 publiclighting.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
 #Disable notification re-sending for now.
