--- a/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
@@ -44,7 +44,7 @@ jaxb2.marshaller.context.path.tariffswitching.schedulemanagement=org.opensmartgr
 
 #Notification Settings
 web.service.notification.enabled=true
-web.service.notification.application.name=
+web.service.notification.application.name=OSGP
 
 tariffswitching.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
 #Disable notification re-sending for now.
