OC-507 ~ Processes review comments

--- a/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/src/main/resources/osgp-adapter-protocol-iec60870.properties
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/src/main/resources/osgp-adapter-protocol-iec60870.properties
@@ -3,16 +3,16 @@
 # =========================================================
 
 #Database Configuration
-db.username.iec60870=osp_admin
-db.password.iec60870=1234
+db.username=osp_admin
+db.password=1234
 
 #PostgreSQL
 db.driver=org.postgresql.Driver
 db.protocol=jdbc:postgresql://
 
-db.host.iec60870=localhost
-db.port.iec60870=5432
-db.name.iec60870=osgp_adapter_protocol_iec60870
+db.host=localhost
+db.port=5432
+db.name=osgp_adapter_protocol_iec60870
 
 db.min_pool_size=1
 db.max_pool_size=5
