--- a/osgp/protocol-adapter-iec61850/osgp-iec61850/pom.xml
+++ b/osgp/protocol-adapter-iec61850/osgp-iec61850/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-iec61850</artifactId>
-    <version>4.34.2-SNAPSHOT</version>
+    <version>4.34.2</version>
     <relativePath>../parent-pa-iec61850/pom.xml</relativePath>
   </parent>
 
