--- a/osgp/protocol-adapter-oslp/web-device-simulator/pom.xml
+++ b/osgp/protocol-adapter-oslp/web-device-simulator/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-oslp</artifactId>
-    <version>4.34.2-SNAPSHOT</version>
+    <version>4.34.2</version>
     <relativePath>../parent-pa-oslp/pom.xml</relativePath>
   </parent>
 
