--- a/osgp/protocol-adapter-oslp/signing-server/pom.xml
+++ b/osgp/protocol-adapter-oslp/signing-server/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-oslp</artifactId>
-    <version>4.34.3-SNAPSHOT</version>
+    <version>4.34.3</version>
     <relativePath>../parent-pa-oslp/pom.xml</relativePath>
   </parent>
 
