--- a/osgp/shared/osgp-ws-admin/pom.xml
+++ b/osgp/shared/osgp-ws-admin/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
-    <version>4.34.3-SNAPSHOT</version>
+    <version>4.34.3</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
 
