OC-504 ~ Adds the simulator as module to higher level poms

--- a/osgp/protocol-adapter-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/pom.xml
@@ -93,5 +93,8 @@
 
     <!-- Protocol Adapter IEC60870 -->
     <module>osgp-protocol-adapter-iec60870</module>
+
+    <!-- Simulator IEC60870 -->
+    <module>osgp-protocol-simulator-iec60870</module>
   </modules>
 </project>
