Feature/oc 373 activemq ssl transport (#39)
* OC-373 ~ Updates core for SSL transport

* OC-373 ~ Updates broker URL for ssl and 61617

* OC-373 ~ Adds logging for ActiveMQ connection factory

* OC-373 ~ Use default ActiveMQ SSl files

* OOC-373 ~ Removes unused import.

--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -57,7 +57,7 @@ publiclighting.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
 publiclighting.scheduling.job.resend.notification.maximum=0
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 jms.default.initial.redelivery.delay=0
 jms.default.maximum.redeliveries=3
