--- a/osgp/platform/osgp-logging/src/main/resources/osgp-logging.properties
+++ b/osgp/platform/osgp-logging/src/main/resources/osgp-logging.properties
@@ -44,7 +44,7 @@ flyway.init.on.migrate=true
 entitymanager.packages.to.scan=org.opensmartgridplatform.logging.domain.entities
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 jms.default.initial.redelivery.delay=0
 jms.default.maximum.redeliveries=3
@@ -78,9 +78,6 @@ jms.logging.use.exponential.back.off=true
 # =========================================================
 # ===   PROTOCOL MESSAGING CONFIG                       ===
 # =========================================================
-
-# ActiveMQ broker
-jms.protocol.log.item.requests.activemq.broker.url=failover:(tcp://localhost:61616)
 
 # Default redelivery settings
 jms.protocol.log.item.requests.initial.redelivery.delay=0
