--- a/integration-tests/cucumber-tests-platform-publiclighting/src/test/resources/cucumber-tests-platform-publiclighting.properties
+++ b/integration-tests/cucumber-tests-platform-publiclighting/src/test/resources/cucumber-tests-platform-publiclighting.properties
@@ -2,6 +2,12 @@ db.name.osgp_adapter_protocol_oslp=osgp_adapter_protocol_oslp
 
 entitymanager.packages.to.scan.oslp=org.opensmartgridplatform.adapter.protocol.oslp.elster.domain.entities
 
+db.name.osgp_adapter_ws_publiclighting=osgp_adapter_ws_publiclighting
+entitymanager.packages.to.scan.ws.publiclighting=org.opensmartgridplatform.adapter.ws.domain.entities
+
+db.name.osgp_adapter_ws_tariffswitching=osgp_adapter_ws_tariffswitching
+entitymanager.packages.to.scan.ws.tariffswitching=org.opensmartgridplatform.adapter.ws.domain.entities
+
 # OSLP
 oslp.timeout.connect=20000
 oslp.port.client=12121
@@ -32,3 +38,9 @@ jaxb2.marshaller.context.path.publiclighting.devicemonitoring=org.opensmartgridp
 jaxb2.marshaller.context.path.publiclighting.schedulemanagement=org.opensmartgridplatform.adapter.ws.schema.publiclighting.schedulemanagement
 jaxb2.marshaller.context.path.tariffswitching.adhocmanagement=org.opensmartgridplatform.adapter.ws.schema.tariffswitching.adhocmanagement
 jaxb2.marshaller.context.path.tariffswitching.schedulemanagement=org.opensmartgridplatform.adapter.ws.schema.tariffswitching.schedulemanagement
+
+jaxb2.marshaller.context.path.publiclighting.notification=org.opensmartgridplatform.adapter.ws.schema.publiclighting.notification
+
+#Notification service
+web.service.notification.context=/notifications
+web.service.notification.port=8088
