--- a/integration-tests/cucumber-tests-platform/pom.xml
+++ b/integration-tests/cucumber-tests-platform/pom.xml
@@ -131,6 +131,10 @@
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-logging</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-adapter-ws-shared</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
