FLEX-4758 ~ Processes review comments.

--- a/integration-tests/cucumber-tests-platform-publiclighting/src/test/resources/cucumber-tests-platform-publiclighting.properties
+++ b/integration-tests/cucumber-tests-platform-publiclighting/src/test/resources/cucumber-tests-platform-publiclighting.properties
@@ -5,8 +5,8 @@ entitymanager.packages.to.scan.oslp=org.opensmartgridplatform.adapter.protocol.o
 db.name.osgp_adapter_ws_publiclighting=osgp_adapter_ws_publiclighting
 entitymanager.packages.to.scan.ws.publiclighting=org.opensmartgridplatform.adapter.ws.domain.entities
 
-db.name.osgp_adapter_ws_tariffswitching=osgp_adapter_ws_tariffswitching
-entitymanager.packages.to.scan.ws.tariffswitching=org.opensmartgridplatform.adapter.ws.domain.entities
+#db.name.osgp_adapter_ws_tariffswitching=osgp_adapter_ws_tariffswitching
+#entitymanager.packages.to.scan.ws.tariffswitching=org.opensmartgridplatform.adapter.ws.domain.entities
 
 # OSLP
 oslp.timeout.connect=20000
