--- a/osgp/protocol-adapter-dlms/parent-pa-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/parent-pa-dlms/pom.xml
@@ -140,6 +140,12 @@
       </dependency>
       <dependency>
         <groupId>org.opensmartgridplatform</groupId>
+        <artifactId>shared</artifactId>
+        <version>${osgp.shared.version}</version>
+        <type>test-jar</type>
+      </dependency>
+      <dependency>
+        <groupId>org.opensmartgridplatform</groupId>
         <artifactId>jasper-interface</artifactId>
         <version>${osgp.jasper-interface.version}</version>
       </dependency>
