--- a/osgp/platform/parent-platform/pom.xml
+++ b/osgp/platform/parent-platform/pom.xml
@@ -47,37 +47,37 @@
     <shared.version>4.35.0-SNAPSHOT</shared.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring.version>4.3.18.RELEASE</spring.version>
-    <spring.ws.version>2.4.0.RELEASE</spring.ws.version>
-    <spring.data.version>1.11.16.RELEASE</spring.data.version>
-    <spring.security.version>4.2.4.RELEASE</spring.security.version>
-    <servlet.version>3.0.1</servlet.version>
+    <spring.version>5.1.5.RELEASE</spring.version>
+    <spring.ws.version>3.0.7.RELEASE</spring.ws.version>
+    <spring.data.version>2.1.5.RELEASE</spring.data.version>
+    <spring.security.version>5.1.4.RELEASE</spring.security.version>
+    <servlet.version>4.0.1</servlet.version>
     <servlet.jstl.version>1.2</servlet.jstl.version>
-    <hibernate.version>4.2.16.Final</hibernate.version>
-    <hibernate.validator.version>4.3.1.Final</hibernate.validator.version>
-    <junit.version>4.12</junit.version>
-    <assertj.version>3.9.1</assertj.version>
+    <hibernate.version>5.4.1.Final</hibernate.version>
+    <hibernate.validator.version>6.0.15.Final</hibernate.validator.version>
+    <junit.version>5.4.1</junit.version>
+    <assertj.version>3.12.2</assertj.version>
     <mockito.version>1.10.19</mockito.version>
-    <joda.version>2.4</joda.version>
-    <flyway.version>4.1.2</flyway.version>
-    <slf4j.version>1.7.7</slf4j.version>
-    <apache.commons.lang.version>3.3.2</apache.commons.lang.version>
-    <apache.httpcomponents.version>4.3.6</apache.httpcomponents.version>
-    <commons.codec.version>1.9</commons.codec.version>
-    <orika.version>1.5.2</orika.version>
-    <jxr.version>2.5</jxr.version>
+    <joda.version>2.10.1</joda.version>
+    <flyway.version>5.0.3</flyway.version>
+    <slf4j.version>1.7.26</slf4j.version>
+    <apache.commons.lang.version>3.8.1</apache.commons.lang.version>
+    <apache.httpcomponents.version>4.5.7</apache.httpcomponents.version>
+    <commons.codec.version>1.12</commons.codec.version>
+    <orika.version>1.5.4</orika.version>
+    <jxr.version>3.0.0</jxr.version>
     <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
     <maven.site.plugin>3.7.1</maven.site.plugin>
-    <apache.activemq.version>5.15.7</apache.activemq.version>
-    <commons.pool.version>1.6</commons.pool.version>
-    <proton-jms.version>0.7</proton-jms.version>
+    <apache.activemq.version>5.15.8</apache.activemq.version>
+<!--     <commons.pool.version>2.6.1</commons.pool.version> -->
+<!--     <proton-jms.version>0.7</proton-jms.version> -->
     <logback.version>1.2.3</logback.version>
-    <logback.ext.version>0.1.4</logback.ext.version>
-    <SunriseSunsetCalculator.version>1.1</SunriseSunsetCalculator.version>
-    <apache.commons.schema>2.0.3</apache.commons.schema>
-    <maven.compiler.plugin.version>3.6.0</maven.compiler.plugin.version>
-    <license.maven.plugin>2.11</license.maven.plugin>
-    <hikaricp.version>2.4.0</hikaricp.version>
+    <logback.ext.version>0.1.5</logback.ext.version>
+    <SunriseSunsetCalculator.version>1.2</SunriseSunsetCalculator.version>
+    <apache.commons.schema>2.2.4</apache.commons.schema>
+    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+    <license.maven.plugin>3.0</license.maven.plugin>
+    <hikaricp.version>3.3.1</hikaricp.version>
   </properties>
 
   <repositories>
@@ -391,7 +391,7 @@
         <version>${spring.security.version}</version>
       </dependency>
 
-      <!-- Servlet API 3.0 -->
+      <!-- Servlet API -->
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
