--- a/osgp/shared/osgp-ws-distributionautomation/pom.xml
+++ b/osgp/shared/osgp-ws-distributionautomation/pom.xml
@@ -17,7 +17,7 @@
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
 
-  <groupId>org.opensmartgridplatform</groupId>
+<!--   <groupId>org.opensmartgridplatform</groupId> -->
   <artifactId>osgp-ws-distributionautomation</artifactId>
 
   <build>
