--- a/public-lighting-demo-app/parent-os-webapps/pom.xml
+++ b/public-lighting-demo-app/parent-os-webapps/pom.xml
@@ -50,23 +50,23 @@
     <osgp.shared.version>4.35.0-SNAPSHOT</osgp.shared.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring.version>4.3.5.RELEASE</spring.version>
-    <spring.ws.version>2.4.0.RELEASE</spring.ws.version>
-    <spring.data.version>1.11.16.RELEASE</spring.data.version>
-    <spring.security.version>4.2.1.RELEASE</spring.security.version>
-    <servlet.version>3.0.1</servlet.version>
+    <spring.version>5.1.5.RELEASE</spring.version>
+    <spring.ws.version>3.0.7.RELEASE</spring.ws.version>
+    <spring.data.version>2.1.5.RELEASE</spring.data.version>
+    <spring.security.version>5.1.4.RELEASE</spring.security.version>
+    <servlet.version>4.0.1</servlet.version>
     <servlet.jstl.version>1.2</servlet.jstl.version>
-    <apache.commons.lang.version>3.3.2</apache.commons.lang.version>
-    <apache.httpcomponents.version>4.3.5</apache.httpcomponents.version>
-    <orika.version>1.5.1</orika.version>
-    <netty.version>3.9.4.Final</netty.version>
-    <jxr.version>2.5</jxr.version>
+    <apache.commons.lang.version>3.8.1</apache.commons.lang.version>
+    <apache.httpcomponents.version>4.5.7</apache.httpcomponents.version>
+    <orika.version>1.5.4</orika.version>
+    <!-- <netty.version>4.1.34.Final</netty.version> -->
+    <jxr.version>3.0.0</jxr.version>
     <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
     <maven.site.plugin>3.7.1</maven.site.plugin>
-    <jackson.jaxrs.version>2.8.6</jackson.jaxrs.version>
-    <maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
-    <license.maven.plugin>2.11</license.maven.plugin>
-    <maven.javadoc.version>2.10.4</maven.javadoc.version>
+    <jackson.jaxrs.version>2.9.8</jackson.jaxrs.version>
+    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+    <license.maven.plugin>3.0</license.maven.plugin>
+    <maven.javadoc.version>3.1.0</maven.javadoc.version>
   </properties>
 
   <repositories>
@@ -155,7 +155,7 @@
         <version>${spring.ws.version}</version>
       </dependency>
 
-      <!-- Servlet API 3.0 -->
+      <!-- Servlet API -->
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
