--- a/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/pom.xml
@@ -49,6 +49,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
     <openmuc.j60870.version>1.2.1</openmuc.j60870.version>
+    <osgp.version>${project.version}</osgp.version>
 
     <jxr.version>2.5</jxr.version>
     <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
@@ -58,10 +59,17 @@
 
   <dependencies>
     <!-- j60870 -->
+<!--     <dependency> -->
+<!--       <groupId>org.openmuc</groupId> -->
+<!--       <artifactId>j60870</artifactId> -->
+<!--       <version>${openmuc.j60870.version}</version> -->
+<!--     </dependency> -->
+
+    <!-- iec60870 -->
     <dependency>
-      <groupId>org.openmuc</groupId>
-      <artifactId>j60870</artifactId>
-      <version>${openmuc.j60870.version}</version>
+      <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-iec60870</artifactId>
+      <version>${osgp.version}</version>
     </dependency>
 
     <!-- Spring Boot dependencies -->
