--- a/osgp/protocol-adapter-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/pom.xml
@@ -90,6 +90,7 @@
     <module>parent-pa-iec60870</module>
     <module>../shared/shared</module>
     <module>../shared/osgp-dto</module>
+    <module>osgp-iec60870</module>
 
     <!-- Protocol Adapter IEC60870 -->
     <module>osgp-protocol-adapter-iec60870</module>
