FLEX-4778 ~ Updates broker URL to use SSL

--- a/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/src/main/resources/osgp-adapter-protocol-iec60870.properties
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/src/main/resources/osgp-adapter-protocol-iec60870.properties
@@ -62,7 +62,7 @@ iec60870.port.listener=2414
 # =========================================================
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)
+jms.activemq.broker.url=failover:(ssl://localhost:61617)
 
 jms.default.initial.redelivery.delay=10000
 jms.default.maximum.redeliveries=1
