Changed to release 4.34.4

--- a/osgp/platform/osgp-domain-distributionautomation/pom.xml
+++ b/osgp/platform/osgp-domain-distributionautomation/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-platform</artifactId>
-    <version>4.34.4-SNAPSHOT</version>
+    <version>4.34.4</version>
     <relativePath>../parent-platform/pom.xml</relativePath>
   </parent>
 
