--- a/osgp/protocol-adapter-iec61850/osgp-core-db-api-iec61850/pom.xml
+++ b/osgp/protocol-adapter-iec61850/osgp-core-db-api-iec61850/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-iec61850</artifactId>
-    <version>4.34.4-SNAPSHOT</version>
+    <version>4.34.4</version>
     <relativePath>../parent-pa-iec61850/pom.xml</relativePath>
   </parent>
 
