--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/pom.xml
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/pom.xml
@@ -40,7 +40,7 @@
       <url>${maven.site.distributionManagement.site.url}</url>
     </site>
   </distributionManagement>
-  <version>4.34.4-SNAPSHOT</version>
+  <version>4.34.4</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
