FLEX-4757 ~ Adds properties to control SOAP message logging and printing.
- configure whether or not SOAP message information is persisted in
web_service_monitor_log table
- configure whether or not SOAP messages are printed to log file
- truncates web_service_monitor_log table

--- a/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
+++ b/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
@@ -45,6 +45,10 @@ entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
 #Jaxb2Marshaller 
 jaxb2.marshaller.context.path.devicemanagement=org.opensmartgridplatform.adapter.ws.schema.admin.devicemanagement
 
+# SOAP message logging to database and printing to log file
+soap.message.logging.enabled=false
+soap.message.printing.enabled=true
+
 #Paging
 paging.maximum.pagesize=30
 paging.default.pagesize=15
