--- a/osgp/platform/osgp-adapter-ws-core/src/main/resources/osgp-adapter-ws-core.properties
+++ b/osgp/platform/osgp-adapter-ws-core/src/main/resources/osgp-adapter-ws-core.properties
@@ -49,6 +49,10 @@ jaxb2.marshaller.context.path.devicemanagement=org.opensmartgridplatform.adapter
 jaxb2.marshaller.context.path.firmwaremanagement=org.opensmartgridplatform.adapter.ws.schema.core.firmwaremanagement
 jaxb2.marshaller.context.path.configurationmanagement=org.opensmartgridplatform.adapter.ws.schema.core.configurationmanagement
 
+# SOAP message logging to database and printing to log file
+soap.message.logging.enabled=false
+soap.message.printing.enabled=true
+
 #Paging
 paging.maximum.pagesize=500
 paging.default.pagesize=15
