--- a/osgp/platform/osgp-adapter-ws-distributionautomation/src/main/resources/osgp-adapter-ws-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-ws-distributionautomation/src/main/resources/osgp-adapter-ws-distributionautomation.properties
@@ -11,6 +11,10 @@
 #Jaxb2Marshaller
 jaxb2.marshaller.context.path.distributionautomation.generic=org.opensmartgridplatform.adapter.ws.schema.distributionautomation.generic
 
+# SOAP message logging to database and printing to log file
+soap.message.logging.enabled=false
+soap.message.printing.enabled=true
+
 #Notification url
 web.service.notification.username=test-org
 web.service.notification.organisation=OSGP
