--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -44,6 +44,10 @@ jaxb2.marshaller.context.path.publiclighting.devicemonitoring=org.opensmartgridp
 jaxb2.marshaller.context.path.publiclighting.adhocmanagement=org.opensmartgridplatform.adapter.ws.schema.publiclighting.adhocmanagement
 jaxb2.marshaller.context.path.publiclighting.schedulemanagement=org.opensmartgridplatform.adapter.ws.schema.publiclighting.schedulemanagement
 
+# SOAP message logging to database and printing to log file
+soap.message.logging.enabled=false
+soap.message.printing.enabled=true
+
 #Paging
 paging.maximum.pagesize=30
 paging.default.pagesize=15
