--- a/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
+++ b/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
@@ -47,6 +47,10 @@ jaxb2.marshaller.context.path.smartmetering.monitoring=org.opensmartgridplatform
 jaxb2.marshaller.context.path.smartmetering.adhoc=org.opensmartgridplatform.adapter.ws.schema.smartmetering.adhoc
 jaxb2.marshaller.context.path.smartmetering.configuration=org.opensmartgridplatform.adapter.ws.schema.smartmetering.configuration
 
+# SOAP message logging to database and printing to log file
+soap.message.logging.enabled=false
+soap.message.printing.enabled=true
+
 application.name=OSGP_ADAPTER_WS_SMARTMETERING
 
 # --- JMS Settings ---
