--- a/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
@@ -42,6 +42,10 @@ entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.core.entiti
 jaxb2.marshaller.context.path.tariffswitching.adhocmanagement=org.opensmartgridplatform.adapter.ws.schema.tariffswitching.adhocmanagement
 jaxb2.marshaller.context.path.tariffswitching.schedulemanagement=org.opensmartgridplatform.adapter.ws.schema.tariffswitching.schedulemanagement
 
+# SOAP message logging to database and printing to log file
+soap.message.logging.enabled=false
+soap.message.printing.enabled=true
+
 #Notification Settings
 web.service.notification.enabled=true
 web.service.notification.application.name=OSGP
