--- a/osgp/platform/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
+++ b/osgp/platform/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
@@ -11,6 +11,10 @@
 #Jaxb2Marshaller
 jaxb2.marshaller.context.path.microgrids.adhocmanagement=org.opensmartgridplatform.adapter.ws.schema.microgrids.adhocmanagement
 
+# SOAP message logging to database and printing to log file
+soap.message.logging.enabled=false
+soap.message.printing.enabled=true
+
 web.service.notification.username=test-org
 web.service.notification.organisation=OSGP
 web.service.notification.enabled=true
