FLEX-4757 ~ Adds scheduled jobs which clean events and device messages.

--- a/osgp/platform/osgp-adapter-domain-core/src/main/resources/osgp-adapter-domain-core.properties
+++ b/osgp/platform/osgp-adapter-domain-core/src/main/resources/osgp-adapter-domain-core.properties
@@ -1,5 +1,5 @@
 # =========================================================
-# ===   PERSISTENCE CONFIG                              ===
+# ===   PERSISTENCE CONFIG DOMAIN CORE                  ===
 # =========================================================
 
 #Database Configuration
@@ -33,6 +33,24 @@ flyway.init.on.migrate=true
 #EntityManager
 #Declares the base package of the entity classes
 entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
+
+
+# =========================================================
+# ===   PERSISTENCE CONFIG DOMAIN LOGGING               ===
+# =========================================================
+
+#Database Configuration
+db.username.domain_logging=osp_admin
+db.password.domain_logging=1234
+
+db.host.domain_logging=localhost
+db.port.domain_logging=5432
+db.name.domain_logging=osgp_logging
+
+#EntityManager
+#Declares the base package of the entity classes
+entitymanager.packages.to.scan.domain_logging=org.opensmartgridplatform.logging.domain.entities
+
 
 # --- JMS Settings ---
 jms.activemq.broker.url=failover:(ssl://localhost:61617)
@@ -227,3 +245,37 @@ jms.osgp.core.responses.incoming.back.off.multiplier=2
 jms.osgp.core.responses.incoming.use.exponential.back.off=true
 
 # =========================================================
+
+
+# =========================================================
+# SCHEDULING CONFIG
+# =========================================================
+
+quartz.scheduler.thread.count=2
+
+# Execution interval of the scheduled job.
+osgp.scheduling.job.database.cleanup.event.cron.expression=0 0 0/1 * * ?
+# Retention period in months for records.
+osgp.scheduling.job.database.cleanup.event.retention=6
+# Number of records to retrieve.
+osgp.scheduling.job.database.cleanup.event.page.size=500000
+# Folder for output files.
+osgp.scheduling.job.database.cleanup.event.csv.file.location=/tmp/csv-files
+# File name prefix, will be used to create file name: [prefix]-[timestamp].csv
+osgp.scheduling.job.database.cleanup.event.csv.file.prefix=osgp-events-
+# Compression using zip of output files.
+osgp.scheduling.job.database.cleanup.event.csv.file.compression.enabled=true
+
+
+# Execution interval of the scheduled job.
+osgp.scheduling.job.database.cleanup.device.message.cron.expression=0 30 0/1 * * ?
+# Retention period in months for records.
+osgp.scheduling.job.database.cleanup.device.message.retention=12
+# Number of records to retrieve.
+osgp.scheduling.job.database.cleanup.device.message.page.size=500000
+# Folder for output files.
+osgp.scheduling.job.database.cleanup.device.message.csv.file.location=/tmp/csv-files
+# File name prefix, will be used to create file name: [prefix]-[timestamp].csv
+osgp.scheduling.job.database.cleanup.device.message.csv.file.prefix=osgp-device-messages-
+# Compression using zip of output files.
+osgp.scheduling.job.database.cleanup.device.message.csv.file.compression.enabled=true
