--- a/osgp/platform/osgp-adapter-domain-core/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-core/pom.xml
@@ -63,6 +63,10 @@
     </dependency>
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-domain-logging</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
     <dependency>
@@ -183,6 +187,11 @@
 
     <!-- Testing dependencies -->
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
@@ -191,5 +200,16 @@
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
